--- a/frontend/index.html
+++ b/frontend/index.html
@@ -319,7 +319,7 @@
           formData.append("username", document.getElementById("username").value);
           formData.append("password", passwordInput.value);
 
-          const res = await fetch("http://127.0.0.1:8000/login", {
+          const res = await fetch("https://rider-app-test.onrender.com/login", {
             method: "POST",
             headers: { "Content-Type": "application/x-www-form-urlencoded" },
             body: formData
@@ -348,3 +348,4 @@
 </body>
 
 </html>
+
