--- a/frontend/reset.html
+++ b/frontend/reset.html
@@ -346,7 +346,7 @@
         resetBtn.disabled = true;
 
         try {
-          const res = await fetch("http://127.0.0.1:8000/reset-password", {
+          const res = await fetch("https://rider-app-test.onrender.com/reset-password", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ token, new_password: newPassword })
@@ -379,5 +379,6 @@
     });
   </script>
 </body>
+
 
 </html>
