--- a/frontend/request-reset.html
+++ b/frontend/request-reset.html
@@ -323,7 +323,7 @@
         requestBtn.disabled = true;
         
         try {
-          const res = await fetch("https://rider-app-backend.onrender.com/generate-reset-token", {
+          const res = await fetch("https://fastapi-test-beige.vercel.app/generate-reset-token", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ username })
@@ -384,4 +384,5 @@
 </body>
 
 </html>
+
 
